--- a/GitHubIssues/packages.config
+++ b/GitHubIssues/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
   <package id="Octokit" version="0.1.8" targetFramework="net45" />
   <package id="Octokit.Reactive" version="0.1.8" targetFramework="net45" />
   <package id="Rx-Core" version="2.1.30214.0" targetFramework="net45" />
