--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\GitHubExtension\GitHubExtension_UnitTests\packages.config" />
   <repository path="..\GitHubExtension\packages.config" />
+  <repository path="..\GitHubIssues\packages.config" />
 </repositories>
