--- a/GitHubIssues/GitHubIssues.csproj
+++ b/GitHubIssues/GitHubIssues.csproj
@@ -78,7 +78,11 @@
     <Compile Include="Factory.cs" />
     <Compile Include="Model\GitHubApi.cs" />
     <Compile Include="Model\Secrets.cs" />
-    <Page Include="View\GiHubUserControl.xaml">
+    <Page Include="View\GitHubUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\IssueListControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -97,8 +101,11 @@
     <Compile Include="Modules\GitHubModule.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Model\ILogonView.cs" />
-    <Compile Include="View\GiHubUserControl.xaml.cs">
-      <DependentUpon>GiHubUserControl.xaml</DependentUpon>
+    <Compile Include="View\GitHubUserControl.xaml.cs">
+      <DependentUpon>GitHubUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\IssueListControl.xaml.cs">
+      <DependentUpon>IssueListControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\LoginControl.xaml.cs">
       <DependentUpon>LoginControl.xaml</DependentUpon>
