--- a/GitHubExtension/packages.config
+++ b/GitHubExtension/packages.config
@@ -1,10 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="akavache" version="3.2.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.5" targetFramework="net45" />
+  <package id="NLog" version="2.1.0" targetFramework="net45" />
+  <package id="NLog.Config" version="2.1.0" targetFramework="net45" />
+  <package id="NLog.Schema" version="2.1.0" targetFramework="net45" />
   <package id="Octokit" version="0.1.8" targetFramework="net45" />
   <package id="Octokit.Reactive" version="0.1.8" targetFramework="net45" />
+  <package id="reactiveui-core" version="5.2.0" targetFramework="net45" />
   <package id="Rx-Core" version="2.1.30214.0" targetFramework="net45" />
   <package id="Rx-Interfaces" version="2.1.30214.0" targetFramework="net45" />
   <package id="Rx-Linq" version="2.1.30214.0" targetFramework="net45" />
   <package id="Rx-Main" version="2.1.30214.0" targetFramework="net45" />
   <package id="Rx-PlatformServices" version="2.1.30214.0" targetFramework="net45" />
+  <package id="Splat" version="1.0.0" targetFramework="net45" />
 </packages>
