--- a/GitHubExtension/GitHubExtension_UnitTests/GitHubExtension_UnitTests.csproj
+++ b/GitHubExtension/GitHubExtension_UnitTests/GitHubExtension_UnitTests.csproj
@@ -51,9 +51,13 @@
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
     <Reference Include="Microsoft.VSSDK.UnitTestLibrary" />
     <Reference Include="Microsoft.VSSDK.TestHostFramework" />
+    <Reference Include="Octokit">
+      <HintPath>..\..\packages\Octokit.0.2.1\lib\net45\Octokit.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Design" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -73,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Key.snk" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GitHubExtension.csproj">
