--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\GitHubExtension\GitHubExtension_UnitTests\packages.config" />
+  <repository path="..\Akavache\Akavache\packages.config" />
   <repository path="..\GitHubExtension\packages.config" />
   <repository path="..\GitHubIssues\packages.config" />
+  <repository path="..\Octokit.net\Octokit\packages.config" />
 </repositories>
