--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "Akavache"]
     path = Akavache
     url = git@github.com:rprouse/Akavache.git
+[submodule "Splat"]
+	path = Splat
+	url = git@github.com:rprouse/splat.git
+    
