--- a/GitHubExtension/GitHubExtension_IntegrationTests/GitHubExtension_IntegrationTests.csproj
+++ b/GitHubExtension/GitHubExtension_IntegrationTests/GitHubExtension_IntegrationTests.csproj
@@ -72,6 +72,7 @@
     <Compile Include="SignOff-Tests\VBProjectTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Key.snk" />
   </ItemGroup>
   <ItemGroup>
