--- a/GitHubExtension/GitHubExtension_UnitTests/GitHubExtension_UnitTests.csproj
+++ b/GitHubExtension/GitHubExtension_UnitTests/GitHubExtension_UnitTests.csproj
@@ -73,6 +73,7 @@
     <!---->
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Key.snk" />
   </ItemGroup>
   <ItemGroup>
