See #5, double clicking on a row now sends the issue to the viewer, still need to fetch all the comments and display it.

--- a/GitHubExtension/GitHubExtension.csproj
+++ b/GitHubExtension/GitHubExtension.csproj
@@ -157,6 +157,7 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IIssueViewer.cs" />
     <Compile Include="IssueListToolWindow.cs" />
     <Compile Include="Guids.cs" />
     <Compile Include="IssueToolWindow.cs" />
