Fix #9 using the MarkdownDeep control, this doesn't fully support the GitHub extensions, so I am going to try MarkdownSharp too, but want to checkpoint my work. This will be good enough otherwise.

--- a/GitHubExtension/GitHubExtension.csproj
+++ b/GitHubExtension/GitHubExtension.csproj
@@ -185,6 +185,7 @@
     <Compile Include="View\LoginDialog.xaml.cs">
       <DependentUpon>LoginDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\WebBrowserBehavior.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources.resx">
