The cached credentials were expiring, increased to 30 days

--- a/GitHubIssues/GitHubIssues.csproj
+++ b/GitHubIssues/GitHubIssues.csproj
@@ -101,7 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Akavache\JsonSerializationMixin.cs" />
-    <Compile Include="Cache.cs" />
+    <Compile Include="Model\Cache.cs" />
     <Compile Include="Akavache\BlobCache.cs" />
     <Compile Include="Akavache\CacheIndexEntry.cs" />
     <Compile Include="Akavache\EncryptedBlobCache.cs" />
